objects/PRT_Advocate_Agent__c.object
<CustomObject>
    <label>Advocate Agent</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advocate Agents</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Agent_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advocate__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Advocate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Brand Advocate</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brand Advocate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advocate Agents/Managers</relationshipLabel>
        <relationshipName>PRT_Agents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Other__c</fullName>
        <label>Role Other</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Manager__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Agent/Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select only an Agent/Manager record</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agent/Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>PRT_AgentClients</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Lookup_Combo__c</fullName>
        <description>SYSTEM Field. Used to test for unique advocate and agent combo. Workflow populated.</description>
        <label>Unique Lookup Combo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Require_Other_description</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Role__c , &apos;Other&apos;) ,ISBLANK( Role_Other__c ))</errorConditionFormula>
        <errorDisplayField>Role_Other__c</errorDisplayField>
        <errorMessage>You must provide a role description</errorMessage>
    </validationRules>
</CustomObject>